--- a/package.json
+++ b/package.json
@@ -21,9 +21,18 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "formidable": "^2.0.1",
+    "helmet": "^5.0.2",
+    "html-pdf-node": "^1.0.8",
     "ip": "^1.1.5",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
-    "sass": "^1.44.0"
+    "qrcode": "^1.5.0",
+    "request": "^2.88.2",
+    "sass": "^1.44.0",
+    "xml-js": "^1.6.11"
   },
   "engine": {
     "node": "14.x"
